[package]
name = "cranelift-c"
version = "0.0.1"
edition = "2021"

[lib]
crate-type = ["staticlib"]

[dependencies]
cranelift = "0.85.1"
cranelift-codegen = "0.85.1"
cranelift-module = "0.85.1"
cranelift-object = "0.85.1"
libc = "0.2.126"
target-lexicon = "0.12.4"

[build-dependencies]
cbindgen = "0.24.3"
